tests/NormalTests/paczka1/small_fuzzy/25034144.err
Error in line 1: Ma021shJ3 S264 80,6
Error in line 10: 6IzF S639 30,4
Error in line 11: Ma021shJ3 S639 78,8
